// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Card components Unit Tests  Dependency component tests I should be able to render the Dependency component 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <CubeIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Dependency Details
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Analysed dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="analyzed-deps"
            size="md"
          >
            5
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Transitive dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="transitive-deps"
            size="md"
          >
            100
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  Dependency component tests I should be able to render the Dependency component with unknowns 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <CubeIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Dependency Details
          </Title>
        </SplitItem>
        <SplitItem>
          <ExclamationCircleIcon
            className="icon-class-exclamation"
            color="currentColor"
            id="unknown-deps-warning"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Analysed dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="analyzed-deps"
            size="md"
          >
            5
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Transitive dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="transitive-deps"
            size="md"
          >
            100
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Unknown dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="unknown-deps"
            size="md"
          >
            5
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I Should be able to render the licenses component I Should be able to render the licenses component 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <FileAltIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Licences
          </Title>
        </SplitItem>
        <SplitItem>
          <ExclamationCircleIcon
            className="icon-class-exclamation"
            color="currentColor"
            id="warning-conflicts-unknown"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          License conflicts:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="confilcts"
            size="md"
          >
            7
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Unknown licenses:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="unknown"
            size="md"
          >
            8
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I Should be able to render the licenses component Warning sign is not shown when unknown/conflicts is zero 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <FileAltIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Licences
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          License conflicts:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="confilcts"
            size="md"
          >
            0
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I Should be able to render the licenses component Warning sign is shown when conflicts is greater 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <FileAltIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Licences
          </Title>
        </SplitItem>
        <SplitItem>
          <ExclamationCircleIcon
            className="icon-class-exclamation"
            color="currentColor"
            id="warning-conflicts-unknown"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          License conflicts:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="confilcts"
            size="md"
          >
            7
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I Should be able to render the licenses component Warning sign is shown when unknown is greater 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <FileAltIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Licences
          </Title>
        </SplitItem>
        <SplitItem>
          <ExclamationCircleIcon
            className="icon-class-exclamation"
            color="currentColor"
            id="warning-conflicts-unknown"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          License conflicts:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="confilcts"
            size="md"
          >
            0
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Unknown licenses:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="unknown"
            size="md"
          >
            7
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I should be able to render the security component I should see no warning when component has no vulns/vulnerable 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <SecurityIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Security Issues
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Total vulnerabilities:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="vulnerablities"
            size="md"
          >
            0
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Vulnerable dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="vulnerable"
            size="md"
          >
            0
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I should be able to render the security component Render Basic Security component 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <SecurityIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Security Issues
          </Title>
        </SplitItem>
        <SplitItem>
          <ExclamationCircleIcon
            className="icon-class-exclamation"
            color="currentColor"
            id="warning-security"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Total vulnerabilities:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="vulnerablities"
            size="md"
          >
            5
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Vulnerable dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="vulnerable"
            size="md"
          >
            3
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  I should be able to render the snyk logo Render Powered By Snyk Component 1`] = `
<Split
  hasGutter={true}
>
  <SplitItem>
    <p
      className="title"
    >
      Powered by:
    </p>
  </SplitItem>
  <SplitItem>
    <img
      alt="snyk"
      className="bitmap"
      id="imgHome"
      src="test-file-stub"
    />
  </SplitItem>
</Split>
`;

exports[`Summary Card components Unit Tests  Should be able to render the Summary Card component 1`] = `
<Card
  className="GridCard"
  isFullHeight={true}
  isHoverable={true}
>
  <CardTitle
    className=""
  >
    <Flex>
      <FlexItem>
        <TextContent>
          <Text
            className="heading"
          >
             Summary of the stack 
          </Text>
        </TextContent>
      </FlexItem>
      <FlexItem>
        <BTSynktoken
          isUUID={false}
        />
      </FlexItem>
      <FlexItem
        align={
          Object {
            "default": "alignRight",
          }
        }
      >
        <ShareSquareIcon
          className="icon-class"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem>
        <DownloadIcon
          className="icon-class"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
    </Flex>
  </CardTitle>
  <Divider />
  <CardBody>
    <PoweredBySynk />
    <SignUp
      isUUID={false}
    />
    <br />
    <Grid
      hasGutter={true}
      span={12}
      xl={6}
      xl2={6}
    >
      <GridItem
        lg={6}
        md={6}
        sm={12}
      >
        <Dependency
          analyzed={0}
          transitive={0}
          unknown={0}
        />
      </GridItem>
      <GridItem
        lg={6}
        md={6}
        sm={12}
      >
        <Security
          vulnerable={0}
          vulnerablities={0}
        />
      </GridItem>
    </Grid>
    <br />
    <Divider
      component="div"
    />
    <br />
    <Grid
      hasGutter={true}
      span={12}
      xl={6}
      xl2={6}
    >
      <GridItem
        lg={6}
        md={6}
        rowSpan={4}
        sm={12}
      >
        <Licenses
          conflicts={0}
          unknown={0}
        />
      </GridItem>
      <GridItem
        lg={6}
        md={6}
        rowSpan={4}
        sm={12}
      >
        <Addons
          companion={0}
        />
      </GridItem>
    </Grid>
  </CardBody>
  <Divider
    component="div"
  />
</Card>
`;

exports[`Summary Card components Unit Tests  Sign up button and Modal Tests [registered user] I should be able to render he Sign up button Component 1`] = `
<div>
  <Button
    className="mybutton"
    icon={
      <CheckSquareIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    }
    iconPosition="right"
    id="green-sign-btn"
    isSmall={true}
    onClick={[Function]}
    variant="warning"
  >
    Snyk Token
  </Button>
  <ModalComponent
    handleToggle={[Function]}
    isModalOpen={false}
  />
</div>
`;

exports[`Summary Card components Unit Tests  Sign up button and Modal Tests [un-registered user] I should be able to render he Sign up button Component 1`] = `
<div>
  <Button
    className="warningbtn"
    icon={
      <ExclamationTriangleIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    }
    iconPosition="right"
    id="yellow-sign-btn"
    isSmall={true}
    onClick={[Function]}
    variant="warning"
  >
    Snyk Token
  </Button>
  <ModalComponent
    handleToggle={[Function]}
    isModalOpen={false}
  />
</div>
`;

exports[`Summary Card components Unit Tests  Summary Addons Test I should be able to render Addons Card 1`] = `
<div>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    display={
      Object {
        "default": "inlineFlex",
      }
    }
    key="1"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          <ZoneIcon
            className="icon-class"
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            size="md"
          >
            Add-ons
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
  <Flex
    direction={
      Object {
        "default": "column",
      }
    }
    key="2"
  >
    <FlexItem
      spacer={
        Object {
          "default": "spacerXs",
        }
      }
    >
      <Split
        hasGutter={true}
      >
        <SplitItem>
          Companion Dependencies:
        </SplitItem>
        <SplitItem>
          <Title
            headingLevel="h6"
            id="companion"
            size="md"
          >
            1
          </Title>
        </SplitItem>
      </Split>
    </FlexItem>
  </Flex>
</div>
`;

exports[`Summary Card components Unit Tests  snyk signup button test I should be able to render the sign up component and check for signup btn 1`] = `
<Split
  hasGutter={true}
>
  <SplitItem>
    <Button
      className=".pf-m-progress"
      component="a"
      href="https://app.snyk.io/login?utm_campaign=Code-Ready-Analytics-2020&utm_source=code_ready&code_ready=FF1B53D9-57BE-4613-96D7-1D06066C38C9"
      iconPosition="right"
      id="snyk-sign-up-btn"
      isSmall={true}
      target="_blank"
    >
      Sign up for Snyk
    </Button>
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    <p
      className="sign-up-text"
    >
      Sign up for a free Snyk account to find out about the vulnerabilities that have been found, and whether any have a publicly known exploit
    </p>
  </SplitItem>
</Split>
`;

exports[`Summary Card components Unit Tests  snyk signup button test I should be able to see no snyk btn when uuid is not set 1`] = `""`;
